--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,21 @@
     <string name="sign_up_action">Зарегистрироваться</string>
     <string name="sign_in_action">Войти</string>
     <string name="forget_password">Забыли пароль?</string>
+    <!-- Strings related to login -->
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_register">Register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="welcome">"Welcome!"</string>
+    <string name="invalid_username">Not a valid username</string>
+    <string name="invalid_password">Password must be >5 characters</string>
+    <string name="login_failed">"Login failed"</string>
+    <string name="title_activity_login">LoginActivity</string>
+    <string name="sign_up_error">Неудалось зарегестрироваться</string>
+    <string name="sign_in_error">Неудалось войти</string>
+    <string name="sign_up_verification">Сообщение с потверждением регистрации отправлено на почту</string>
+    <string name="sign_up_verification_error">Неудалось отправить cообщение с потверждением регистрации на почту</string>
+    <string name="sign_up_need">Войдите или зарегестрируйтесь!</string>
+    <string name="have_account">Уже есть аккаунт</string>
 </resources>
